--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                     <div class="pushpin-head"></div>
                     <div class="pushpin-needle"></div>
                 </div>
-                <img class="cute-image" src="gatito_perrito.jpg" alt="Gatito y perrito bajo la lluvia">
+                <img class="cute-image" src="gatito_perrito.png" alt="Gatito y perrito bajo la lluvia">
                 <div class="cute-image-caption">Te quiero</div>
             </div>
             <svg class="img-heart img-heart-1" width="18" height="18" viewBox="0 0 30 30"><path d="M15 26 C15 26 3 18 3 10 C3 5 7 2 11 5 C13 7 15 9 15 9 C15 9 17 7 19 5 C23 2 27 5 27 10 C27 18 15 26 15 26Z" fill="#ff6b8a"/></svg>
