Add .gitignore file to exclude unnecessary files from version control

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         .heart-container {
             position: relative;
             margin-bottom: 20px;
-            animation: heartbeat 2s ease-in-out infinite;
+            animation: heartDrop 1.2s cubic-bezier(0.34, 1.56, 0.64, 1) 0.3s forwards, heartbeat 2s ease-in-out 1.5s infinite;
+            opacity: 0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -70,10 +71,18 @@
 
         @keyframes heartbeat {
             0%, 100% { transform: scale(1); }
-            15% { transform: scale(1.05); }
+            15% { transform: scale(1.08); }
             30% { transform: scale(1); }
-            45% { transform: scale(1.03); }
+            45% { transform: scale(1.04); }
             60% { transform: scale(1); }
+        }
+
+        @keyframes heartDrop {
+            0% { opacity: 0; transform: translateY(-80px) scale(0) rotate(-30deg); }
+            50% { opacity: 1; transform: translateY(10px) scale(1.15) rotate(5deg); }
+            70% { transform: translateY(-5px) scale(0.95) rotate(-2deg); }
+            85% { transform: translateY(3px) scale(1.02) rotate(1deg); }
+            100% { opacity: 1; transform: translateY(0) scale(1) rotate(0deg); }
         }
 
         .heart-svg {
@@ -91,11 +100,24 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            animation: gradient-shift 5s ease infinite;
+            animation: titleReveal 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.8s forwards, gradient-shift 5s ease 2s infinite, titleGlow 3s ease-in-out 2s infinite;
+            opacity: 0;
             text-shadow: none;
             margin-bottom: 18px;
             letter-spacing: 1px;
             filter: drop-shadow(0 2px 8px rgba(168, 50, 72, 0.2));
+        }
+
+        @keyframes titleReveal {
+            0% { opacity: 0; transform: translateY(30px) scale(0.8); filter: blur(10px) drop-shadow(0 2px 8px rgba(168, 50, 72, 0)); }
+            60% { opacity: 1; transform: translateY(-5px) scale(1.05); filter: blur(0) drop-shadow(0 2px 15px rgba(168, 50, 72, 0.4)); }
+            80% { transform: translateY(2px) scale(0.98); }
+            100% { opacity: 1; transform: translateY(0) scale(1); filter: blur(0) drop-shadow(0 2px 8px rgba(168, 50, 72, 0.2)); }
+        }
+
+        @keyframes titleGlow {
+            0%, 100% { filter: drop-shadow(0 2px 8px rgba(168, 50, 72, 0.2)); }
+            50% { filter: drop-shadow(0 2px 16px rgba(168, 50, 72, 0.4)); }
         }
 
         .name {
@@ -108,8 +130,21 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            animation: gradient-shift 4s ease infinite;
+            animation: nameReveal 1.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s forwards, gradient-shift 4s ease 2.9s infinite, nameGlow 4s ease-in-out 2.9s infinite;
+            opacity: 0;
             filter: drop-shadow(0 3px 8px rgba(168, 50, 72, 0.25));
+        }
+
+        @keyframes nameReveal {
+            0% { opacity: 0; letter-spacing: 30px; filter: blur(12px); transform: scale(0.6); }
+            40% { opacity: 0.7; letter-spacing: 12px; filter: blur(3px); transform: scale(1.05); }
+            70% { opacity: 1; letter-spacing: 6px; filter: blur(0); transform: scale(0.98); }
+            100% { opacity: 1; letter-spacing: 8px; filter: blur(0); transform: scale(1); }
+        }
+
+        @keyframes nameGlow {
+            0%, 100% { filter: drop-shadow(0 3px 8px rgba(168, 50, 72, 0.25)); }
+            50% { filter: drop-shadow(0 3px 20px rgba(168, 50, 72, 0.5)); }
         }
 
         @keyframes gradient-shift {
@@ -124,9 +159,21 @@
             color: #9B4858;
             margin-top: 22px;
             opacity: 0;
-            animation: fadeIn 2s ease-out 1s forwards;
+            animation: messageFade 1.5s ease-out 2.3s forwards, messageFloat 4s ease-in-out 3.8s infinite;
             letter-spacing: 2px;
             font-style: italic;
+        }
+
+        @keyframes messageFade {
+            0% { opacity: 0; transform: translateY(20px); letter-spacing: 8px; }
+            60% { opacity: 1; letter-spacing: 1px; }
+            80% { transform: translateY(-3px); }
+            100% { opacity: 1; transform: translateY(0); letter-spacing: 2px; }
+        }
+
+        @keyframes messageFloat {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-4px); }
         }
 
         @keyframes fadeIn {
@@ -180,19 +227,30 @@
             font-family: 'Cormorant Garamond', serif;
         }
 
+        @keyframes swoopIn {
+            from { opacity: 0; transform: rotate(-3deg) translateY(80px) scale(0.5); filter: blur(4px); }
+            60% { transform: rotate(-4deg) translateY(-8px) scale(1.04); filter: blur(0); }
+            80% { transform: rotate(-2deg) translateY(3px) scale(0.98); }
+            to { opacity: 1; transform: rotate(-3deg) translateY(0) scale(1); filter: blur(0); }
+        }
+
         /* Imagen de gatito y perrito */
         .cute-image-container {
             margin-top: 20px;
             pointer-events: none;
-            animation: fadeIn 2s ease-out 1.5s forwards;
+            animation: swoopIn 1.4s cubic-bezier(0.34, 1.56, 0.64, 1) 2.8s forwards, polaroidFloat 5s ease-in-out 4.2s infinite;
             opacity: 0;
             position: relative;
-            transform: rotate(-3deg);
+        }
+
+        @keyframes polaroidFloat {
+            0%, 100% { transform: rotate(-3deg) translateY(0); }
+            50% { transform: rotate(-2deg) translateY(-5px); }
         }
 
         .cute-image-frame {
             background: #fff;
-            padding: 10px 10px 14px 10px;
+            padding: 10px 10px 0 10px;
             border-radius: 3px;
             box-shadow:
                 0 4px 15px rgba(0, 0, 0, 0.2),
@@ -219,6 +277,14 @@
             z-index: 10;
             width: 24px;
             height: 24px;
+            opacity: 0;
+            animation: pushpinDrop 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) 3.5s forwards;
+        }
+
+        @keyframes pushpinDrop {
+            0% { opacity: 0; transform: translateX(-50%) translateY(-30px) scale(0.3); }
+            60% { opacity: 1; transform: translateX(-50%) translateY(3px) scale(1.1); }
+            100% { opacity: 1; transform: translateX(-50%) translateY(0) scale(1); }
         }
 
         .pushpin-head {
@@ -259,8 +325,22 @@
             font-size: 22px;
             color: #000000;
             text-align: center;
-            margin-top: 14px;
+            margin-top: 0;
             letter-spacing: 1px;
+            height: 28px;
+            line-height: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            animation: captionWrite 1s ease-out 3.8s forwards;
+        }
+
+        @keyframes captionWrite {
+            0% { opacity: 0; transform: scale(0.5) rotate(-5deg); }
+            50% { opacity: 1; transform: scale(1.1) rotate(2deg); }
+            70% { transform: scale(0.95) rotate(-1deg); }
+            100% { opacity: 1; transform: scale(1) rotate(0deg); }
         }
 
         .cute-image {
@@ -312,22 +392,22 @@
             100% { transform: translateY(-58px) scale(0.6) rotate(5deg); opacity: 0; }
         }
 
-        /* Corazones exteriores */
-        .img-heart-1 { top: 10%; left: -18px; animation: floatHeart1 3.5s ease-in-out infinite; }
-        .img-heart-2 { top: 30%; right: -20px; animation: floatHeart2 4s ease-in-out infinite 1.2s; }
-        .img-heart-3 { top: -5%; left: 50%; animation: floatHeart3 3s ease-in-out infinite 2.5s; }
-        .img-heart-4 { top: 50%; left: -14px; animation: floatHeart4 3.8s ease-in-out infinite 0.7s; }
-        .img-heart-5 { top: 20%; right: -12px; animation: floatHeart5 4.2s ease-in-out infinite 1.8s; }
+        /* Corazones exteriores - distribuidos alrededor del marco */
+        .img-heart-1 { top: 5%; left: -22px; animation: floatHeart1 3.5s ease-in-out infinite; }
+        .img-heart-2 { top: 35%; right: -24px; animation: floatHeart2 4s ease-in-out infinite 1.2s; }
+        .img-heart-3 { top: -12%; left: 40%; animation: floatHeart3 3s ease-in-out infinite 2.5s; }
+        .img-heart-4 { top: 55%; left: -18px; animation: floatHeart4 3.8s ease-in-out infinite 0.7s; }
+        .img-heart-5 { top: 65%; right: -16px; animation: floatHeart5 4.2s ease-in-out infinite 1.8s; }
 
-        /* Corazones interiores (dentro de la imagen) */
+        /* Corazones interiores (flotando sobre la imagen) */
         .img-heart-inner { z-index: 2; }
-        .img-heart-6 { top: 15%; left: 18%; animation: floatHeart2 3.2s ease-in-out infinite 0.5s; }
-        .img-heart-7 { top: 25%; right: 15%; animation: floatHeart1 3.8s ease-in-out infinite 2s; }
-        .img-heart-8 { top: 40%; left: 40%; animation: floatHeart3 4.5s ease-in-out infinite 1s; }
-        .img-heart-9 { top: 55%; left: 25%; animation: floatHeart5 3.5s ease-in-out infinite 3s; }
-        .img-heart-10 { top: 35%; right: 25%; animation: floatHeart4 4s ease-in-out infinite 0.3s; }
-        .img-heart-11 { top: 60%; right: 18%; animation: floatHeart1 3.3s ease-in-out infinite 1.5s; }
-        .img-heart-12 { top: 10%; left: 55%; animation: floatHeart2 4.2s ease-in-out infinite 2.8s; }
+        .img-heart-6 { top: -8%; left: 15%; animation: floatHeart2 3.2s ease-in-out infinite 0.5s; }
+        .img-heart-7 { top: -10%; right: 10%; animation: floatHeart1 3.8s ease-in-out infinite 2s; }
+        .img-heart-8 { top: 80%; left: 10%; animation: floatHeart3 4.5s ease-in-out infinite 1s; }
+        .img-heart-9 { top: 82%; right: 8%; animation: floatHeart5 3.5s ease-in-out infinite 3s; }
+        .img-heart-10 { top: 25%; left: -26px; animation: floatHeart4 4s ease-in-out infinite 0.3s; }
+        .img-heart-11 { top: 85%; left: 45%; animation: floatHeart1 3.3s ease-in-out infinite 1.5s; }
+        .img-heart-12 { top: -6%; left: 65%; animation: floatHeart2 4.2s ease-in-out infinite 2.8s; }
 
         @media (max-width: 600px) {
             .cute-image {
@@ -339,7 +419,7 @@
             }
 
             .cute-image-frame {
-                padding: 7px 7px 10px 7px;
+                padding: 7px 7px 0 7px;
             }
 
             .cute-image-caption {
@@ -675,20 +755,20 @@
                 <img class="cute-image" src="gatito_perrito.png" alt="Gatito y perrito bajo la lluvia">
                 <div class="cute-image-caption">Te quiero</div>
             </div>
-            <!-- Corazones exteriores - formas hand-drawn variadas -->
-            <svg class="img-heart img-heart-1" width="18" height="18" viewBox="0 0 30 30"><path d="M15 27 C15 27 2 18 2.5 10 C3 5 7 1.5 11 5 C13 7 15 10 15 10 C15 10 17.5 6.5 20 4.5 C24 1.5 27.5 5.5 27 11 C26 18 15 27 15 27Z" fill="#ff6b8a"/></svg>
-            <svg class="img-heart img-heart-2" width="15" height="15" viewBox="0 0 30 30"><path d="M15 28 C15 28 5 20 5 12 C5 7 8 3 11.5 6.5 C13.5 8.5 15 11 15 11 C15 11 16.5 8.5 18.5 6.5 C22 3 25 7 25 12 C25 20 15 28 15 28Z" fill="#ff8fa8"/></svg>
-            <svg class="img-heart img-heart-3" width="12" height="12" viewBox="0 0 30 30"><path d="M15 25 C15 25 0.5 17 1 9.5 C1.5 4 6 0.5 11 5 C13.5 7.5 15 9.5 15 9.5 C15 9.5 16.5 7.5 19 5 C24 0.5 28.5 4 29 9.5 C29.5 17 15 25 15 25Z" fill="#ffaabb"/></svg>
-            <svg class="img-heart img-heart-4" width="14" height="14" viewBox="0 0 30 30"><path d="M13 27 C13 27 1 19 1.5 11 C2 5.5 5.5 2 10 5.5 C12 7.5 13 10 13 10 C13 10 16 6 20 3.5 C25 1 28.5 5 28 11.5 C27 19.5 13 27 13 27Z" fill="#C84858"/></svg>
-            <svg class="img-heart img-heart-5" width="10" height="10" viewBox="0 0 30 30"><path d="M16 28 C16 28 3 19 3.5 11 C4 5 7.5 2.5 11.5 6 C14 8 16 10.5 16 10.5 C16 10.5 18 7 21 4.5 C25 1.5 28 5.5 27.5 11.5 C27 19 16 28 16 28Z" fill="#ff6b8a"/></svg>
-            <!-- Corazones interiores - formas hand-drawn variadas -->
-            <svg class="img-heart img-heart-inner img-heart-6" width="14" height="14" viewBox="0 0 30 30"><path d="M15 26 C15 26 2.5 18.5 2 11 C1.5 5 5.5 1 10 4 C12.5 5.5 14.5 8.5 15 9.5 C15.5 8.5 17.5 5.5 20 4 C24.5 1 28.5 5 28 11 C27.5 18.5 15 26 15 26Z" fill="#ff2050"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-7" width="12" height="12" viewBox="0 0 30 30"><path d="M15 28 C15 28 6 21 6.5 13 C7 8 9.5 4 12 7 C13.5 9 15 11 15 11 C15 11 16.5 9 18 7 C20.5 4 23 8 23.5 13 C24 21 15 28 15 28Z" fill="#ffffff" opacity="0.95"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-8" width="16" height="16" viewBox="0 0 30 30"><path d="M14 26 C14 26 1 17 1.5 9.5 C2 4 6.5 1 11 5.5 C13 7.5 14 10 14 10 C14 10 15.5 8 18 6 C22 3 26 6 26 10.5 C26 17 14 26 14 26Z" fill="#e81040"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-9" width="10" height="10" viewBox="0 0 30 30"><path d="M15 27 C15 27 1.5 19 2 11.5 C2.5 6 6 2 10.5 4.5 C13 6 15 9.5 15 9.5 C15 9.5 17 6 19.5 4.5 C24 2 27.5 6 28 11.5 C28.5 19 15 27 15 27Z" fill="#ff4070"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-10" width="11" height="11" viewBox="0 0 30 30"><path d="M16 27 C16 27 3.5 18 4 10.5 C4.5 5 7.5 2 11 5 C13 7 15 9 15.5 9.5 C16 9 18.5 5.5 21.5 3 C26 0.5 29 5 28.5 11 C28 18 16 27 16 27Z" fill="#ffffff" opacity="0.9"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-11" width="13" height="13" viewBox="0 0 30 30"><path d="M15 25 C15 25 3 17 3.5 10.5 C4 5.5 7.5 2.5 11 5.5 C13 7.5 15 10 15 10 C15 10 17 7.5 19 5.5 C22.5 2.5 26 5.5 26.5 10.5 C27 17 15 25 15 25Z" fill="#ff2050"/></svg>
-            <svg class="img-heart img-heart-inner img-heart-12" width="9" height="9" viewBox="0 0 30 30"><path d="M15 27 C15 27 3 17 4 10 C4.5 5.5 8 2 12 6 C14 8 15 10 15 10 C15 10 16 8 18 6 C22 2 25.5 5.5 26 10 C27 17 15 27 15 27Z" fill="#e81040"/></svg>
+            <!-- Corazones hand-drawn estilo variado alrededor de la imagen -->
+            <svg class="img-heart img-heart-1" width="20" height="20" viewBox="0 0 50 50"><path d="M25 44 C23 40 4 28 4 16 C4 8 10 3 16 6 C20 8 23 13 25 16 C27 12 30 7 35 5 C41 3 47 8 46 16 C45 28 27 40 25 44Z" fill="#ff6b8a"/></svg>
+            <svg class="img-heart img-heart-2" width="17" height="17" viewBox="0 0 50 50"><path d="M24 43 C22 39 5 30 3 18 C2 10 8 4 15 5 C19 6 22 10 24 14 C26 9 30 4 36 4 C43 4 48 11 46 19 C44 30 26 39 24 43Z" fill="#ff8fa8"/></svg>
+            <svg class="img-heart img-heart-3" width="14" height="14" viewBox="0 0 50 50"><path d="M26 45 C24 41 6 29 5 17 C4 9 9 3 16 5 C21 7 24 12 26 15 C28 11 32 6 37 4 C44 2 48 9 47 17 C46 29 28 41 26 45Z" fill="#ffaabb"/></svg>
+            <svg class="img-heart img-heart-4" width="16" height="16" viewBox="0 0 50 50"><path d="M25 46 C23 42 3 29 3 15 C3 7 9 2 17 5 C21 7 24 12 25 15 C26 11 29 5 34 3 C42 1 48 7 47 16 C46 29 27 42 25 46Z" fill="#C84858"/></svg>
+            <svg class="img-heart img-heart-5" width="12" height="12" viewBox="0 0 50 50"><path d="M24 42 C22 38 6 28 5 18 C4 11 9 5 14 6 C18 7 21 11 24 15 C27 10 31 6 36 5 C42 4 46 10 45 18 C44 28 26 38 24 42Z" fill="#ff6b8a"/></svg>
+            <!-- Corazones interiores hand-drawn -->
+            <svg class="img-heart img-heart-inner img-heart-6" width="16" height="16" viewBox="0 0 50 50"><path d="M25 43 C23 39 7 30 5 19 C4 11 8 4 14 4 C19 4 23 9 25 13 C27 8 31 3 37 3 C43 3 47 10 46 19 C45 30 27 39 25 43Z" fill="#ff2050"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-7" width="13" height="13" viewBox="0 0 50 50"><path d="M26 44 C24 40 5 27 4 16 C3 8 10 3 16 6 C20 8 24 13 26 16 C28 12 31 6 36 4 C42 2 48 8 47 16 C46 27 28 40 26 44Z" fill="#ffffff" opacity="0.95"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-8" width="18" height="18" viewBox="0 0 50 50"><path d="M24 45 C22 41 3 28 3 16 C3 8 8 3 15 5 C20 7 23 12 24 15 C25 11 28 5 34 3 C41 1 47 7 47 16 C47 28 26 41 24 45Z" fill="#e81040"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-9" width="11" height="11" viewBox="0 0 50 50"><path d="M25 42 C23 38 6 29 5 19 C4 12 9 6 14 6 C18 6 22 10 25 14 C28 9 32 5 37 5 C43 5 47 12 46 19 C45 29 27 38 25 42Z" fill="#ff4070"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-10" width="12" height="12" viewBox="0 0 50 50"><path d="M26 43 C24 39 7 28 6 17 C5 9 10 3 16 5 C20 7 24 12 26 16 C28 11 31 5 36 3 C42 1 47 8 46 17 C45 28 28 39 26 43Z" fill="#ffffff" opacity="0.9"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-11" width="15" height="15" viewBox="0 0 50 50"><path d="M25 44 C23 40 4 27 3 15 C2 7 8 2 15 5 C20 8 23 13 25 16 C27 12 30 6 35 3 C42 1 48 7 48 15 C48 27 27 40 25 44Z" fill="#ff2050"/></svg>
+            <svg class="img-heart img-heart-inner img-heart-12" width="10" height="10" viewBox="0 0 50 50"><path d="M24 41 C22 37 5 28 4 18 C3 11 8 5 13 5 C17 5 21 9 24 13 C27 8 31 4 36 4 C42 4 46 11 45 18 C44 28 26 37 24 41Z" fill="#e81040"/></svg>
         </div>
     </div>
 
