style: Update linear-gradient background colors.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             display: inline-block;
             margin-left: 6px;
             letter-spacing: 2px;
-            background: linear-gradient(135deg, #C41E3A 0%, #E60023 20%, #FF2D55 40%, #D4143A 60%, #B22222 80%, #C41E3A 100%);
+            background: linear-gradient(135deg, #FFD700 0%, #FFA500 15%, #FF6347 30%, #FF2D55 45%, #E60023 60%, #FF69B4 75%, #FFD700 100%);
             background-size: 300% 300%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
