--- a/index.html
+++ b/index.html
@@ -849,6 +849,48 @@
             }
         }
 
+        /* Boton de musica mute/unmute */
+        .music-btn {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 200;
+            background: rgba(168, 50, 72, 0.15);
+            border: 1px solid rgba(168, 50, 72, 0.3);
+            color: #9B4858;
+            font-size: 22px;
+            width: 48px;
+            height: 48px;
+            border-radius: 50%;
+            cursor: pointer;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .music-btn:hover {
+            background: rgba(168, 50, 72, 0.25);
+            border-color: rgba(168, 50, 72, 0.5);
+            transform: scale(1.1);
+        }
+
+        .music-btn:active {
+            transform: scale(0.95);
+        }
+
+        @media (max-width: 600px) {
+            .music-btn {
+                bottom: 20px;
+                right: 20px;
+                width: 42px;
+                height: 42px;
+                font-size: 18px;
+            }
+        }
+
         /* Orbes de luz bokeh */
         .bokeh-container {
             position: fixed;
@@ -955,10 +997,60 @@
                 font-size: 3vw;
             }
         }
+        /* Pantalla de bienvenida */
+        .welcome-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: transparent;
+            cursor: pointer;
+        }
+
+        .welcome-overlay.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .welcome-text {
+            font-family: 'Great Vibes', cursive;
+            font-size: 48px;
+            color: #9B4858;
+            margin-bottom: 30px;
+            animation: pulse-welcome 2s ease-in-out infinite;
+        }
+
+        .welcome-hint {
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 16px;
+            color: rgba(155, 72, 88, 0.6);
+            letter-spacing: 3px;
+            animation: pulse-welcome 2s ease-in-out infinite 0.5s;
+        }
+
+        @keyframes pulse-welcome {
+            0%, 100% { opacity: 0.7; transform: scale(1); }
+            50% { opacity: 1; transform: scale(1.05); }
+        }
+
+        @media (max-width: 600px) {
+            .welcome-text {
+                font-size: 10vw;
+            }
+            .welcome-hint {
+                font-size: 3.5vw;
+            }
+        }
     </style>
 </head>
 
 <body>
+    <!-- Pantalla de bienvenida -->
+    <div class="welcome-overlay" id="welcomeOverlay" onclick="enterPage()">
+    </div>
+
     <!-- Orbes bokeh de fondo -->
     <div class="bokeh-container" id="bokeh"></div>
 
@@ -1218,6 +1310,11 @@
     </div>
 
     <!--<div class="date">14 de Febrero</div>-->
+
+    <audio id="bgMusic" preload="auto">
+        <source src="01 America - You Can Do Magic.mp3" type="audio/mpeg">
+    </audio>
+    <button class="music-btn" id="musicBtn" onclick="toggleMusic(event)">&#9835;</button>
 
     <!--<button class="download-btn" id="downloadBtn" onclick="downloadPDF()">Descargar Tarjeta</button>
 -->
@@ -1628,6 +1725,117 @@
                 img.onerror = showImage; // Mostrar aunque falle para no romper el layout
             }
         });
+
+        // ========================================
+        // MUSICA DE FONDO CON FADE IN/OUT Y LOOP
+        // ========================================
+        const bgMusic = document.getElementById('bgMusic');
+        const musicBtn = document.getElementById('musicBtn');
+        const MUSIC_START = 47;       // Inicio del primer coro
+        const MUSIC_END = 200;        // Antes del final para hacer fade out
+        const FADE_DURATION = 3000;   // 3 segundos de fade
+        const MAX_VOLUME = 0.5;
+        let isMuted = false;
+        let musicStarted = false;
+        let isFadingOut = false;
+
+        bgMusic.volume = 0;
+
+        function fadeIn() {
+            let vol = 0;
+            bgMusic.volume = 0;
+            const step = MAX_VOLUME / (FADE_DURATION / 50);
+            const interval = setInterval(() => {
+                vol = Math.min(vol + step, MAX_VOLUME);
+                bgMusic.volume = vol;
+                if (vol >= MAX_VOLUME) clearInterval(interval);
+            }, 50);
+        }
+
+        function fadeOutAndLoop() {
+            if (isFadingOut) return;
+            isFadingOut = true;
+            let vol = bgMusic.volume;
+            const step = vol / (FADE_DURATION / 50);
+            const interval = setInterval(() => {
+                vol = Math.max(vol - step, 0);
+                bgMusic.volume = vol;
+                if (vol <= 0) {
+                    clearInterval(interval);
+                    isFadingOut = false;
+                    bgMusic.currentTime = MUSIC_START;
+                    bgMusic.play().then(() => fadeIn()).catch(() => {});
+                }
+            }, 50);
+        }
+
+        // Vigilar el tiempo para hacer fade out antes del final
+        bgMusic.addEventListener('timeupdate', () => {
+            if (bgMusic.currentTime >= MUSIC_END && !isFadingOut) {
+                fadeOutAndLoop();
+            }
+        });
+
+        // Si llega al final natural, reiniciar
+        bgMusic.addEventListener('ended', () => {
+            isFadingOut = false;
+            bgMusic.currentTime = MUSIC_START;
+            bgMusic.play().then(() => fadeIn()).catch(() => {});
+        });
+
+        function startMusic() {
+            if (musicStarted) return;
+            musicStarted = true;
+
+            function doSeekAndPlay() {
+                // Posicionar primero, esperar a que termine el seek, luego reproducir
+                bgMusic.currentTime = MUSIC_START;
+                bgMusic.addEventListener('seeked', function onSeeked() {
+                    bgMusic.removeEventListener('seeked', onSeeked);
+                    bgMusic.play().then(() => {
+                        fadeIn();
+                        musicBtn.innerHTML = '&#9835;';
+                    }).catch(() => {
+                        musicStarted = false;
+                    });
+                });
+            }
+
+            if (bgMusic.readyState >= 3) {
+                doSeekAndPlay();
+            } else {
+                bgMusic.addEventListener('canplaythrough', function handler() {
+                    bgMusic.removeEventListener('canplaythrough', handler);
+                    doSeekAndPlay();
+                });
+                bgMusic.load();
+            }
+        }
+
+        function toggleMusic(e) {
+            if (e) e.stopPropagation();
+            if (!musicStarted) {
+                startMusic();
+                isMuted = false;
+                return;
+            }
+            isMuted = !isMuted;
+            if (isMuted) {
+                bgMusic.pause();
+                musicBtn.innerHTML = '&#10006;';
+            } else {
+                bgMusic.play();
+                musicBtn.innerHTML = '&#9835;';
+            }
+        }
+
+        // Iniciar al tocar la pantalla de bienvenida
+        function enterPage() {
+            const overlay = document.getElementById('welcomeOverlay');
+            overlay.classList.add('hidden');
+            setTimeout(() => overlay.remove(), 1000);
+            startMusic();
+        }
     </script>
 </body>
 
